feat: added routing, base components and styles

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,22 +1,26 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  font-family: 'Questrial', Sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 16px;
+  letter-spacing: 0.32px;
+  color: #222222;
+
+  background-color: rgb(255, 255, 255);
+
+  min-width: 100%;
   min-height: 100vh;
+
+  padding: 0px 30px;
+
+  #root {
+    max-width: 1200px;
+
+    display: flex;
+    flex-direction: column;
+
+    min-height: 100vh;
+  }
 }
