--- a/src/index.scss
+++ b/src/index.scss
@@ -16,7 +16,9 @@ body {
   padding: 0px 30px;
 
   #root {
-    max-width: 1200px;
+    max-width: 1500px;
+
+    margin: 0 auto;
 
     display: flex;
     flex-direction: column;
