--- a/src/pages/registration/register-form/register-form.module.scss
+++ b/src/pages/registration/register-form/register-form.module.scss
@@ -53,6 +53,10 @@
     line-height: 1em;
     letter-spacing: 0.32px;
 
+    -webkit-box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.1);
+
     border-radius: 5px;
     border: none;
 
