feat: added def Bill address and Shipp address

--- a/src/pages/registration/register-form/register-form.module.scss
+++ b/src/pages/registration/register-form/register-form.module.scss
@@ -89,6 +89,12 @@
     box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.1);
   }
 
+  .login__form__input__checkbox {
+    margin-left: 0 auto;
+    height: 15px;
+    width: 100%;
+  }
+
   @media (any-hover: hover) {
     .login__form__btn:hover {
       background: #5eabdd;
