--- a/src/pages/notfoundpage/notfoundpage.scss
+++ b/src/pages/notfoundpage/notfoundpage.scss
@@ -1,9 +1,28 @@
 main {
+  display: flex;
   flex: 1;
-
+  align-items: center;
+  justify-content: center;
   border: 1px solid black;
   border-radius: 5px;
 
   padding: 5px 10px;
   margin-bottom: 10px;
+}
+
+.container {
+  display: flex;
+  flex: 1;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.image-404 {
+  width: clamp(300px, 80%, 500px);
+  aspect-ratio: 1/1;
+  object-fit: cover;
+  object-position: 50% 50%;
+  margin-left: auto;
+  margin-right: auto;
 }
