--- a/src/components/registration-prompt/registration-prompt.module.scss
+++ b/src/components/registration-prompt/registration-prompt.module.scss
@@ -1,6 +1,7 @@
 .registration__prompt__container {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 10px;
   font-size: 1.1rem;
   line-height: 110%;
