--- a/src/pages/login/login-form/login-form.module.scss
+++ b/src/pages/login/login-form/login-form.module.scss
@@ -18,6 +18,15 @@
       display: flex;
       flex-direction: row;
       align-items: center;
+
+      @media screen and (max-width: 600px) {
+        & {
+          flex-direction: column;
+          align-items: start;
+          gap: 10px;
+          text-align: start;
+        }
+      }
     }
 
     label {
