--- a/src/components/navigation/navigation.module.scss
+++ b/src/components/navigation/navigation.module.scss
@@ -47,67 +47,62 @@
 
 .burgerMenuContainer {
   display: none;
-  width: 30px;
-  height: 25px;
   position: relative;
   cursor: pointer;
   z-index: 4;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 100%;
+  border: 2px solid black;
 }
 
 .line {
   width: 100%;
   height: 3px;
-  position: absolute;
-  content: '';
-  background-color: black;
+  background-color: inherit;
   border-radius: 5px;
   transition: all 0.3s ease;
 }
 
-.line:nth-child(2) {
-  top: 50%;
-  transform: translate(0, -50%);
+.line::before,
+.line::after {
+    content: "";
+    position: absolute;
+    left: 25%;
+    width: 50%;
+    height: 3px;
+    background-color: black;
 }
 
-.line:nth-child(3) {
-  bottom: 0;
+.line::before {
+  top: 14px;
+  transition: 0.2s 0.2s top linear,
+  0.2s 0s transform linear;
 }
 
-.active .line:nth-child(1) {
-  transform: rotate(42deg) translate(6px, 9px);
-  width: 120%;
+.line::after {
+  bottom: 14px;
+  transition: 0.2s 0.2s bottom linear,
+  0.2s 0s transform linear;
 }
 
-.active .line:nth-child(2) {
-  opacity: 0;
+.active .line::before {
+  top: 20px;
+  transform: rotate(45deg);
 }
 
-.active .line:nth-child(3) {
-  transform: rotate(-42deg) translate(6px, -9px);
-  width: 120%;
+.active .line::after {
+  bottom: 17px;
+  transform: rotate(-45deg);
 }
-
 
 
 
 @media screen and (max-width: 768px) {
-  // .navMenu._active {
-  //   position: fixed;
-  //   top: 0;
-  //   left: 0;
-  //   width: 100%;
-  //   height: 100%;
-  //   background-color: #01010080;
-  // }
-
-  // .ulMenu._active {
-  //   position: fixed;
-  //   width: 50%;
-  //   height: 50%;
-  //   right: 0;
-  // }
 
   .burgerMenuContainer {
-    display: block;
+    display: flex;
   }
 }
