fix: small design fix

--- a/src/pages/registration/register-form/register-form.module.scss
+++ b/src/pages/registration/register-form/register-form.module.scss
@@ -47,7 +47,7 @@
 
     @media screen and (max-width: 600px) {
       & {
-        width: auto;
+        width: 250px;
       }
     }
 
@@ -55,6 +55,12 @@
       color: red;
       padding: 5px 30px;
       font-size: 14px;
+
+      @media screen and (max-width: 600px) {
+        & {
+          padding: 8px 0 0 0;
+        }
+      }
     }
 
     label {
