--- a/src/pages/notfoundpage/notfoundpage.module.scss
+++ b/src/pages/notfoundpage/notfoundpage.module.scss
@@ -1,5 +1,5 @@
 .notFound {
-  background-image: url(../../../public/images/404_1.webp);
+  background-image: url(./images/404_1.webp);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
