--- a/src/components/navigation/navigation.module.scss
+++ b/src/components/navigation/navigation.module.scss
@@ -1,3 +1,19 @@
+.nav__btn {
+    border: none;
+    background-color: white;
+    border-radius: 5px;
+
+    padding: 3px 10px;
+
+    cursor: pointer;
+}
+
+@media (any-hover: hover) {
+  .nav__btn:hover {
+    background-color: lightgray;
+  }
+}
+
 .navMenu {
   display: flex;
   flex-direction: row;
