--- a/src/index.scss
+++ b/src/index.scss
@@ -34,6 +34,13 @@ body {
     padding: 5px 10px;
     margin-bottom: 10px;
   }
+
+
+  @media screen and (max-width: 768px) {
+    & {
+      padding: 0 15px;
+    }
+  }
 }
 
 .no-scroll {
