--- a/src/pages/notfoundpage/notfoundpage.module.scss
+++ b/src/pages/notfoundpage/notfoundpage.module.scss
@@ -3,21 +3,31 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-}
 
-.container {
-  display: flex;
-  flex: 1;
-  align-items: center;
-  justify-content: center;
-  margin: 0 auto;
-}
+  position: relative;
 
-.image-404 {
-  width: clamp(300px, 80%, 500px);
-  aspect-ratio: 1/1;
-  object-fit: cover;
-  object-position: 50% 50%;
-  margin-left: auto;
-  margin-right: auto;
+  .backToMain {
+    position: absolute;
+    bottom: 10%;
+    left: calc(50% - 32px);
+
+    font-size: 18px;
+    font-weight: 400;
+    padding: 5px 10px;
+    border: 3px solid darkolivegreen;
+
+    color: azure;
+    background-color: #205e20;
+
+    -webkit-box-shadow: 0px 0px 20px 25px rgba(255, 255, 255, 1);
+    -moz-box-shadow: 0px 0px 20px 25px rgba(255, 255, 255, 1);
+    box-shadow: 0px 0px 20px 20px rgba(255, 255, 255, 1);
+  }
+
+  @media (any-hover: hover) {
+    .backToMain:hover {
+      background-color: lightgray;
+      color: black;
+    }
+  }
 }
