--- a/src/components/burger-menu/burgerMenu.module.scss
+++ b/src/components/burger-menu/burgerMenu.module.scss
@@ -1,4 +1,3 @@
-
 .burgerMenuContainer {
   display: none;
   position: relative;
@@ -22,24 +21,26 @@
 
 .line::before,
 .line::after {
-    content: "";
-    position: absolute;
-    left: 25%;
-    width: 50%;
-    height: 3px;
-    background-color: black;
+  content: '';
+  position: absolute;
+  left: 25%;
+  width: 50%;
+  height: 3px;
+  background-color: black;
 }
 
 .line::before {
   top: 14px;
-  transition: 0.2s 0.2s top linear,
-  0.2s 0s transform linear;
+  transition:
+    0.2s 0.2s top linear,
+    0.2s 0s transform linear;
 }
 
 .line::after {
   bottom: 14px;
-  transition: 0.2s 0.2s bottom linear,
-  0.2s 0s transform linear;
+  transition:
+    0.2s 0.2s bottom linear,
+    0.2s 0s transform linear;
 }
 
 .active .line::before {
@@ -52,10 +53,7 @@
   transform: rotate(-45deg);
 }
 
-
-
 @media screen and (max-width: 768px) {
-
   .burgerMenuContainer {
     display: flex;
   }
