--- a/src/pages/product/product.module.scss
+++ b/src/pages/product/product.module.scss
@@ -1,4 +1,35 @@
 .productWrapper {
   display: flex;
+  flex: 1;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  .title {
+    font-size: 36px;
+    margin: 40px 0;
+  }
+
+  .imageTitleWrapper {
+    width: 100%;
+
+    .imageTitleBorder {
+      border-radius: 15px;
+      overflow: hidden;
+
+      width: 80%;
+      min-width: 340px;
+      max-width: 700px;
+      margin: 0 auto;
+
+      .imageTitle {
+        display: block;
+        width: 100%;
+      }
+    }
+  }
+
+  .loadingPage {
+    font-size: 36px;
+  }
 }
