feat: refactor medal component to work with JSX

--- a/src/components/modal/modalWindow.module.scss
+++ b/src/components/modal/modalWindow.module.scss
@@ -5,9 +5,11 @@
   border-radius: 10px;
   background-color: #ddecf9;
 
-  p {
+  .p {
     font-size: 1.2rem;
-    margin-bottom: 50px;
+    margin-bottom: 1.5vw;
+
+    text-align: center;
   }
 
   .modalErrorBtn {
