feat: added modal to the Product Page

--- a/src/components/carousel/styles.scss
+++ b/src/components/carousel/styles.scss
@@ -10,7 +10,7 @@
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-  background: #fff;
+  background: transparent;
 
   display: flex;
   justify-content: center;
