--- a/src/pages/product/product.module.scss
+++ b/src/pages/product/product.module.scss
@@ -34,6 +34,10 @@
     .imageTitleWrapper {
       width: 50%;
 
+      cursor: pointer;
+
+      transition: all 0.3s ease;
+
       display: flex;
       align-items: center;
 
@@ -47,6 +51,12 @@
           display: block;
           width: 100%;
         }
+      }
+    }
+
+    @media (any-hover: hover) {
+      .imageTitleWrapper:hover {
+        scale: 1.02;
       }
     }
 
