--- a/src/pages/product/product.module.scss
+++ b/src/pages/product/product.module.scss
@@ -9,8 +9,7 @@
     display: flex;
     flex-direction: row-reverse;
 
-    margin-bottom: 20px;
-    padding: 20px 0;
+    padding: 10px 0;
 
     .content {
       display: flex;
@@ -22,12 +21,14 @@
 
       .title {
         font-size: 5vw;
+        line-height: 100%;
+        text-align: center;
 
         margin: 10px auto;
       }
       .description {
         font-size: 2vw;
-        line-height: 130%;
+        line-height: 120%;
       }
     }
 
@@ -99,6 +100,122 @@
     }
   }
 
+  .buyWrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    width: 100%;
+
+    padding: 10px 0;
+
+    .buyPromo {
+      font-size: 30px;
+      width: fit-content;
+
+      margin-right: 20px;
+    }
+
+    .buyBtn {
+      background-color: #3dd1e7;
+      border: 0 solid #e5e7eb;
+      box-sizing: border-box;
+      color: #000000;
+      display: flex;
+      font-family:
+        ui-sans-serif,
+        system-ui,
+        -apple-system,
+        system-ui,
+        'Segoe UI',
+        Roboto,
+        'Helvetica Neue',
+        Arial,
+        'Noto Sans',
+        sans-serif,
+        'Apple Color Emoji',
+        'Segoe UI Emoji',
+        'Segoe UI Symbol',
+        'Noto Color Emoji';
+      font-size: 1.3rem;
+      font-weight: 700;
+      justify-content: center;
+      line-height: 1.75rem;
+      padding: 10px 30px;
+      position: relative;
+      text-align: center;
+      text-decoration: none #000000 solid;
+      text-decoration-thickness: auto;
+      width: fit-content;
+      max-width: 460px;
+      position: relative;
+      cursor: pointer;
+      transform: rotate(-2deg);
+      user-select: none;
+      -webkit-user-select: none;
+      touch-action: manipulation;
+    }
+
+    .buyBtn:focus {
+      outline: 0;
+    }
+
+    .buyBtn:after {
+      content: '';
+      position: absolute;
+      border: 1px solid #000000;
+      bottom: 4px;
+      left: 4px;
+      width: calc(100% - 1px);
+      height: calc(100% - 1px);
+    }
+
+    .buyBtn:hover:after {
+      bottom: 2px;
+      left: 2px;
+    }
+  }
+
+  .addTitle {
+    font-size: 4vw;
+    line-height: 100%;
+    text-align: center;
+
+    margin: 10px auto;
+  }
+  .addWrapper li {
+    font-size: 2vw;
+    line-height: 140%;
+  }
+
+  @media screen and (max-width: 800px) {
+    .addTitle {
+      font-size: 36px;
+      line-height: 100%;
+      text-align: center;
+
+      margin: 10px auto;
+    }
+    .addWrapper li {
+      font-size: 16px;
+      line-height: 140%;
+    }
+  }
+
+  .videoWrapper {
+    margin: 15px 0;
+
+    width: 100%;
+
+    border-radius: 10px;
+    overflow: hidden;
+
+    .video {
+      width: 100%;
+    }
+  }
+
   .loadingPage {
     font-size: 36px;
   }
@@ -107,6 +224,8 @@
     width: 100%;
     display: flex;
     justify-content: center;
+
+    padding: 10px 0;
 
     margin-bottom: 20px;
   }
