feat: update modal btn styes to make it same with project style

--- a/src/components/modal/modalWindow.module.scss
+++ b/src/components/modal/modalWindow.module.scss
@@ -1,5 +1,5 @@
 .modalError {
-  padding: 40px;
+  padding: 20px;
   z-index: 5;
   position: fixed;
   border-radius: 10px;
@@ -13,9 +13,30 @@
   }
 
   .modalErrorBtn {
-    background-color: #4396dd;
-    display: flex;
+    display: block;
+    transition: 0.2s ease;
+
+    background-color: #1d4ae9;
+    color: #ffffff;
+
     margin: 0 auto;
+
+    font-size: 16px;
+    font-weight: 400;
+    text-transform: none;
+    line-height: 1em;
+    letter-spacing: 0.32px;
+
+    border-radius: 5px;
+    border: none;
+
+    cursor: pointer;
+  }
+
+  @media (any-hover: hover) {
+    .modalErrorBtn:hover {
+      background: #5eabdd;
+    }
   }
 }
 
