--- a/src/pages/main/main.module.scss
+++ b/src/pages/main/main.module.scss
@@ -8,16 +8,9 @@
     border-radius: 5px;
 
     padding: 3px 10px;
+    margin-right: 10px;
 
     cursor: pointer;
-  }
-
-  .mainSection {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    flex: 1;
   }
 
   @media (any-hover: hover) {
@@ -25,4 +18,35 @@
       background-color: lightgray;
     }
   }
+}
+
+.navigate {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 5px;
+  background-color: rgb(10, 10, 89);
+}
+
+.mainSection {
+  display: flex;
+  flex: 1;
+}
+
+.catalogPageTitle {
+  margin-bottom: 50px;
+  text-align: center;
+
+  @media screen and (max-width: 600px) {
+    & {
+      margin-bottom: 25px;
+    }
+  }
+}
+
+.formWrapper {
+  width: 20%;
+}
+
+.cardsWrapper {
+  width: 80%;
 }
