--- a/src/components/user-password/userPasswordForm.module.scss
+++ b/src/components/user-password/userPasswordForm.module.scss
@@ -1,5 +1,108 @@
 .userPasswordForm {
-  padding: 10px;
   background-color: #eee;
   border-radius: 10px;
+  margin-bottom: 20px;
+
+  .profileFormError {
+    margin-top: 10px;
+    color: red;
+    margin-left: 10px;
+  }
+
+  .profileFormPassIco {
+    display: inline-block;
+    margin-left: -20px;
+    transform: translate(25px, 5px);
+    cursor: pointer;
+
+    svg {
+      height: 20px;
+      width: 20px;
+    }
+  }
+
+  .profileFormInput {
+    padding: 5px 10px;
+    border-radius: 10px;
+    border-color: aliceblue;
+  }
+
+  .profileFormBtn {
+    align-self: flex-start;
+    border: none;
+    background-color: #ccc;
+    color: #888;
+    margin-left: 80px;
+    cursor: default;
+
+    &:enabled {
+      background-color: #1d4ae9;
+      color: white;
+      cursor: pointer;
+    }
+
+    @media screen and (max-width: 510px) {
+      & {
+        margin: 0 auto;
+      }
+    }
+  }
+}
+
+.passwordFormContainer {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  gap: 20px;
+
+  background-color: #eee;
+  padding: 30px;
+  border-radius: 10px;
+
+  hr {
+    width: 100%;
+  }
+
+  .basicInfoItemContainer {
+    display: flex;
+    gap: 10px;
+  }
+
+  h3 {
+    margin: 0;
+    text-align: center;
+    font-size: 1.2rem;
+    line-height: 120%;
+  }
+
+  h4 {
+    margin: 0;
+    min-width: 150px;
+    text-align: center;
+  }
+}
+
+.labelInputContainer {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  flex-wrap: wrap;
+
+  label {
+    font-weight: 600;
+    min-width: 160px;
+    text-align: center;
+
+    @media screen and (max-width: 510px) {
+      & {
+        min-width: 200px;
+      }
+    }
+  }
+
+  @media screen and (max-width: 510px) {
+    & {
+      justify-content: center;
+    }
+  }
 }
