--- a/src/pages/main/categorylist/categories.module.scss
+++ b/src/pages/main/categorylist/categories.module.scss
@@ -6,22 +6,6 @@
   height: 80vh;
   background: linear-gradient(to bottom, rgb(255, 255, 255) 0%, rgb(104, 80, 193) 55%, rgb(49, 13, 115) 100%);
 
-  &::-webkit-scrollbar {
-    width: 10px;
-    background-color: rgb(2, 2, 62);
-  }
-
-  &::-webkit-scrollbar-track {
-    border: 5px solid (255, 255, 255, 0.25);
-    box-shadow: inset 0 0 2.5px 2px (0, 0, 0, 0, 0.5);
-    background-clip: content-box;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    border-radius: 5px;
-    background: linear-gradient(to right, #fff, blue);
-    cursor: pointer;
-  }
 }
 
 .titleContainer {
@@ -50,6 +34,36 @@
   cursor: pointer;
   transition: 0.2s ease;
   height: fit-content;
+}
+
+.categoryWrapper {
+  height: 30vh;
+  overflow: auto;
+}
+
+.filterWrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+form::-webkit-scrollbar,
+.categoryWrapper::-webkit-scrollbar {
+  width: 10px;
+  background-color: rgb(2, 2, 62);
+}
+
+form::-webkit-scrollbar-track,
+.categoryWrapper::-webkit-scrollbar-track {
+  border: 5px solid (255, 255, 255, 0.25);
+  box-shadow: inset 0 0 2.5px 2px (0, 0, 0, 0, 0.5);
+  background-clip: content-box;
+}
+
+form::-webkit-scrollbar-thumb,
+.categoryWrapper::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background: linear-gradient(to right, #fff, blue);
+  cursor: pointer;
 }
 
 @media (hover: hover) {
