feat: added categories buttons on page

--- a/src/pages/product/product.module.scss
+++ b/src/pages/product/product.module.scss
@@ -177,46 +177,145 @@
     }
   }
 
-  .addWrapper {
-    margin: 2vw 0;
-  }
+  .categoryWrapper {
+    display: flex;
+    flex-direction: column;
 
-  .addList li {
-    font-size: 2vw;
-    line-height: 140%;
-    margin: 15px 0;
-  }
-  .addTitle {
-    font-size: 4vw;
-    line-height: 100%;
-    text-align: center;
-  }
-
-  @media screen and (max-width: 800px) {
-    .addTitle {
-      font-size: 30px;
+    .categoryTitle {
+      font-size: 4vw;
       line-height: 100%;
       text-align: center;
-
-      margin: 10px auto;
     }
-    .addList li {
-      font-size: 16px;
-      margin: 10px 0;
-      line-height: 130%;
+
+    .listWrapper {
+      display: flex;
+      flex-direction: row;
+      gap: 4vw;
+      flex-wrap: wrap;
+      padding: 0;
+      justify-content: center;
+    }
+
+    .categoryItem {
+      list-style: none;
+    }
+
+    .categoryBtn {
+      align-self: center;
+      background-color: #fff;
+      background-image: none;
+      background-position: 0 90%;
+      background-repeat: repeat no-repeat;
+      background-size: 4px 3px;
+      border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
+      border-style: solid;
+      border-width: 2px;
+      box-shadow: rgba(0, 0, 0, 0.2) 15px 28px 25px -18px;
+      box-sizing: border-box;
+      color: #41403e;
+      cursor: pointer;
+      display: inline-block;
+      font-family: Neucha, sans-serif;
+      font-size: 2vw;
+      line-height: 23px;
+      outline: none;
+      padding: 0.75rem;
+      text-decoration: none;
+      transition: all 235ms ease-in-out;
+      border-bottom-left-radius: 15px 255px;
+      border-bottom-right-radius: 225px 15px;
+      border-top-left-radius: 255px 15px;
+      border-top-right-radius: 15px 225px;
+      user-select: none;
+      -webkit-user-select: none;
+      touch-action: manipulation;
+
+      &:hover {
+        box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 8px -5px;
+        transform: translate3d(0, 2px, 0);
+      }
+
+      &:focus {
+        box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 4px -6px;
+      }
+    }
+
+    @media screen and (max-width: 800px) {
+      .categoryTitle {
+        font-size: 30px;
+        line-height: 100%;
+        text-align: center;
+
+        margin: 10px auto;
+      }
+      .categoryBtn {
+        font-size: 16px;
+      }
     }
   }
 
-  .videoWrapper {
-    margin: 15px 0;
+  .addWrapper {
+    margin: 2vw 0;
 
-    border-radius: 10px;
-    overflow: hidden;
+    .addList li {
+      font-size: 2vw;
+      line-height: 140%;
+      margin: 15px 0;
+    }
+    .addTitle {
+      font-size: 4vw;
+      line-height: 100%;
+      text-align: center;
+    }
 
-    .video {
-      display: block;
-      width: 90%;
-      margin: 0 auto;
+    @media screen and (max-width: 800px) {
+      .addTitle {
+        font-size: 30px;
+        line-height: 100%;
+        text-align: center;
+
+        margin: 10px auto;
+      }
+      .addList li {
+        font-size: 16px;
+        margin: 10px 0;
+        line-height: 130%;
+      }
+    }
+  }
+
+  .videoBlockWrapper {
+    .videoTitle {
+      font-size: 4vw;
+      line-height: 100%;
+      text-align: center;
+    }
+    .videoWrapper {
+      margin: 15px 0;
+
+      border-radius: 10px;
+      overflow: hidden;
+
+      .video {
+        display: block;
+        width: 90%;
+        margin: 0 auto;
+      }
+    }
+
+    @media screen and (max-width: 800px) {
+      .videoTitle {
+        font-size: 30px;
+        line-height: 100%;
+        text-align: center;
+
+        margin: 10px auto;
+      }
+      .addList li {
+        font-size: 16px;
+        margin: 10px 0;
+        line-height: 130%;
+      }
     }
   }
 
