--- a/src/components/user-password/userPasswordForm.module.scss
+++ b/src/components/user-password/userPasswordForm.module.scss
@@ -25,6 +25,12 @@
     padding: 5px 10px;
     border-radius: 10px;
     border-color: aliceblue;
+
+    &:focus {
+      -webkit-box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.1);
+      -moz-box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.1);
+      box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.1);
+    }
   }
 
   .profileFormBtn {
