--- a/src/pages/main/breadcrumbs/breadcrumbs.module.scss
+++ b/src/pages/main/breadcrumbs/breadcrumbs.module.scss
@@ -1,1 +1,23 @@
-.breadcrumbList {}
+.breadcrumbs {
+    max-width: 1200px;
+    margin: 20px auto;
+    background: rgb(4, 4, 93);
+}
+
+.breadcrumbs>* {
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.breadcrumbs .crumb:after {
+    content: '>';
+    margin-left: 10px;
+}
+
+.breadcrumbs .crumb:last-child:after {
+    display: none;
+}
+
+.breadcrumbs .crumb a {
+    color: #ddd;
+}
