feat: add search input, sorting radio button, positive callbacks range input

--- a/src/components/slider/doubleSlider.module.scss
+++ b/src/components/slider/doubleSlider.module.scss
@@ -28,6 +28,7 @@ h3.title {
     font-weight: 700;
     margin: 0 0 20px 0;
     color: $legend-color;
+    line-height: 110%;
 
     span {
         font-weight: 400;
