--- a/src/pages/main/categorylist/year-picker/yearPicker.module.scss
+++ b/src/pages/main/categorylist/year-picker/yearPicker.module.scss
@@ -2,9 +2,7 @@ $legend-color: #3f4656;
 $range-background-color: #cdb7b7;
 
 .yearSelect {
-    max-width: max-content;
+    width: 50%;
+    min-width: max-content;
     padding: 2px;
-    background: $range-background-color;
 }
-
-.yearOption {}
