--- a/src/components/checkbox/checkboxComponent.module.scss
+++ b/src/components/checkbox/checkboxComponent.module.scss
@@ -7,7 +7,7 @@
     cursor: pointer;
 }
 
-.categoryInput {
+.checkboxInput {
     appearance: none;
     position: absolute;
     top: 2px;
@@ -19,11 +19,11 @@
     border-radius: 3px;
 }
 
-.categoryInput:checked {
+.checkboxInput:checked {
     background-color: #2b60d2;
 }
 
-.categoryInput:checked::before {
+.checkboxInput:checked::before {
     content: "";
     display: block;
     position: absolute;
@@ -41,5 +41,5 @@
 .boxContainer p {
     font-size: 16px;
     line-height: 1.2;
-    color: #000;
+    color: #fff;
 }
