--- a/src/pages/main/categorylist/categories.module.scss
+++ b/src/pages/main/categorylist/categories.module.scss
@@ -3,8 +3,8 @@
   padding: 5px 20px 5px 10px;
   width: 100%;
   overflow: auto;
-  height: 80vh;
-  background: linear-gradient(to bottom, rgb(255, 255, 255) 0%, rgb(104, 80, 193) 55%, rgb(49, 13, 115) 100%);
+  height: 100%;
+  background: linear-gradient(to top, rgb(255, 255, 255) 0%, rgb(104, 80, 193) 55%, rgb(49, 13, 115) 100%);
 
 }
 
@@ -30,7 +30,7 @@
 }
 
 .categoryTitle {
-  color: rgb(3, 3, 50);
+  color: #fff;
   margin-right: 10px;
 }
 
@@ -46,7 +46,7 @@
 }
 
 .categoryWrapper {
-  height: 30vh;
+  height: 50vh;
   overflow: auto;
 }
 
@@ -54,6 +54,44 @@
 .yearFilterWrapper {
   display: flex;
   flex-direction: column;
+}
+
+.searchLabel {
+  position: relative;
+
+  .glassImg {
+    position: absolute;
+    top: 0;
+    right: 10px;
+    width: 20px;
+    height: 20px;
+    background-image: url(./magnifying-glass.svg);
+    background-repeat: no-repeat;
+    background-position: center right;
+    background-size: 20px 20px;
+    z-index: 2;
+    cursor: pointer;
+    transition: all 0.2s linear;
+  }
+
+  .searchField {
+    position: relative;
+    padding: 5px 40px 5px 10px;
+    height: 40px;
+    width: 100%;
+    border-radius: 10px;
+    margin-bottom: 10px;
+  }
+
+  .searchField:focus {
+    box-shadow: 10px 5px 5px rgb(76, 95, 99);
+  }
+}
+
+
+
+.searchField:active {
+  outline: none;
 }
 
 form::-webkit-scrollbar,
@@ -72,12 +110,17 @@ form::-webkit-scrollbar-track,
 form::-webkit-scrollbar-thumb,
 .categoryWrapper::-webkit-scrollbar-thumb {
   border-radius: 5px;
-  background: linear-gradient(to right, #fff, blue);
+  background: linear-gradient(to right, #fff, #0000ff);
   cursor: pointer;
 }
 
 @media (hover: hover) {
   .formBtn:hover {
     background: lightgray;
+  }
+
+  .glassImg:hover,
+  .glassImg:active {
+    background-image: url(./magnifying-glass-hover.svg);
   }
 }
