--- a/src/components/user-addresses/userAddresses.module.scss
+++ b/src/components/user-addresses/userAddresses.module.scss
@@ -54,14 +54,14 @@
     margin-bottom: 10px;
     align-items: center;
     background-color: aliceblue;
-    padding: 10px;
+    padding: 10px 5px;
     flex-grow: 1;
     flex-wrap: wrap;
     border-radius: 10px;
+    justify-content: center;
 
     h4 {
       margin: 0;
-      // min-width: 100px;
       text-align: center;
     }
   }
@@ -70,10 +70,15 @@
     display: flex;
     justify-content: end;
 
+    .addressManageBtnsContainer {
+      margin-right: auto;
+      display: flex;
+      gap: 10px;
+    }
+
     .setDefaultAddressBtn {
       border: none;
       background-color: #bcbcbc;
-      margin-right: auto;
       padding: 10px;
 
       @media screen and (any-hover: hover) {
