--- a/src/components/user-addresses/userAddresses.module.scss
+++ b/src/components/user-addresses/userAddresses.module.scss
@@ -34,11 +34,17 @@
   }
 }
 
-.shippingAddressesContainer {
-  background-color: #a9aaea;
+.shippingAddressesContainer,
+.billingAddressesContainer {
+  background-color: #71c791;
   padding: 10px;
   border-radius: 10px;
   margin-top: 20px;
+  width: 100%;
+}
+
+.billingAddressesContainer {
+  background-color: #7697cf;
 }
 
 .addressContainer {
@@ -157,6 +163,7 @@
     @media screen and (max-width: 540px) {
       & {
         margin-top: 20px;
+        margin-right: 0;
       }
     }
   }
