--- a/src/components/modal/modalWindow.module.scss
+++ b/src/components/modal/modalWindow.module.scss
@@ -5,20 +5,6 @@
   border-radius: 10px;
   background-color: #ddecf9;
 
-  .modalBtnsContainer {
-    display: flex;
-    gap: 10px;
-    justify-content: center;
-    gap: 30px;
-  }
-
-  .modalBtnsContainer {
-    display: flex;
-    gap: 10px;
-    justify-content: center;
-    gap: 30px;
-  }
-
   .p {
     font-size: 1.2rem;
     margin-bottom: 1.5vw;
@@ -27,9 +13,37 @@
   }
 
   .modalErrorBtn {
-    background-color: #4396dd;
-    display: flex;
+    display: block;
+    transition: 0.2s ease;
+
+    background-color: #1d4ae9;
+    color: #ffffff;
+
     margin: 0 auto;
+
+    font-size: 16px;
+    font-weight: 400;
+    text-transform: none;
+    line-height: 1em;
+    letter-spacing: 0.32px;
+
+    border-radius: 5px;
+    border: none;
+
+    cursor: pointer;
+  }
+
+  .modalBtnsContainer {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    gap: 30px;
+  }
+
+  @media (any-hover: hover) {
+    .modalErrorBtn:hover {
+      background: #5eabdd;
+    }
   }
 }
 
